--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -32,7 +32,8 @@ header
 
 .header__navbar__list__item
 {
-    width: 15%;
+    width: auto;
+    margin-left: 4em;
     text-align: right;
     font-size: 24px;
 }
