--- a/src/styles/AccommodationsList.css
+++ b/src/styles/AccommodationsList.css
@@ -8,16 +8,16 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .accommodationsList__card
 {
     position: relative;
-    width: 540px;
-    height: 540px;
+    width: 340px;
+    height: 340px;
     border-radius: 10px;
-    margin: 4em;
+    margin: 25px 30px;
     overflow: hidden;
 }
 
