--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -2,7 +2,7 @@
 {
     position: relative;
     width: calc(100% - 200px);
-    height: 350px;
+    height: 223px;
     border-radius: 25px;
     margin: 50px 100px;
     overflow: hidden;
@@ -12,6 +12,7 @@
 {
     width: 100%;
     font-size: 48px;
+    font-weight: 500;
     color: #FFFFFF;
     position: absolute;
     text-align: center;
@@ -21,7 +22,7 @@
 .banner__image
 {
     width: 100%;
-    height: 400px;
+    height: 223px;
     object-fit: cover;
     filter: brightness(65%);
 }
