Modification des classes CSS et ajout du responsive pour le composant en version large

--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -1,4 +1,4 @@
-.collapse, .collapse__button, .collapse__container
+.collapse-large, .collapse__button, .collapse__container
 {
   width: calc(100% - 200px);
   margin: 0 100px;
