--- a/src/styles/responsive/Collapse.css
+++ b/src/styles/responsive/Collapse.css
@@ -25,7 +25,12 @@
         width: calc(100% - 40px);
         margin-left: 20px;
         margin-right: 20px;
-    } 
+    }
+
+    .collapse-small 
+    {
+        width: 100%;
+    }
 }
 
 @media (max-width: 576px) 
