Ajout du CSS pour les différents composants

--- a/src/styles/Carrousel.css
+++ b/src/styles/Carrousel.css
@@ -2,7 +2,7 @@
 {
     position: relative;
     width: calc(100% - 200px);
-    margin: 50px 100px;
+    margin: 50px 100px 20px 100px;
     height: 415px;
     border-radius: 25px;
     overflow: hidden;
