Ajout du css pour le footer et ajout d'une règle permettant le placement du footer en bas de page

--- a/src/styles/Error.css
+++ b/src/styles/Error.css
@@ -1,7 +1,7 @@
 .error
 {
     width: calc(100% - 200px);
-    margin: 100px;
+    margin: 50px 100px;
     color: #FF6060;
     text-align: center;
 }
